Адаптирует под устройства

--- a/index.html
+++ b/index.html
@@ -393,46 +393,46 @@
                 </ul>
             </div>
         </section>
-        <!-- <section class="section">
+        <section class="section">
             <div class="container">
                 <h2 class="work__title">Постоянные клиенты</h2>
                 <ul class="regular-clients list">
-                    <li>
+                    <li class="regular-clients__element">
                         <a class="regular-clients__link" href="">
                             <svg class="regular-clients__item" width="106">
                                 <use href="./images/sprite.svg#icon-company-one"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="regular-clients__element">
                         <a class="regular-clients__link" href="">
                             <svg class="regular-clients__item" width="106">
                                 <use href="./images/sprite.svg#icon-company-two"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="regular-clients__element">
                         <a class="regular-clients__link" href="">
                             <svg class="regular-clients__item" width="106">
                                 <use href="./images/sprite.svg#icon-company-three"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="regular-clients__element">
                         <a class="regular-clients__link" href="">
                             <svg class="regular-clients__item" width="106">
                                 <use href="./images/sprite.svg#icon-company-four"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="regular-clients__element">
                         <a class="regular-clients__link" href="">
                             <svg class="regular-clients__item" width="106">
                                 <use href="./images/sprite.svg#icon-company-five"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="regular-clients__element">
                         <a class="regular-clients__link" href="">
                             <svg class="regular-clients__item" width="106">
                                 <use href="./images/sprite.svg#icon-company-six"></use>
@@ -441,15 +441,15 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
     </main>
 
     <!-- Footer -->
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container footer-container">
             <div class="footer-addres footer__relations">
                 <a href="" class="footer-addres__logo link color"><span>Web</span>Studio</a>
-                <address>
+                <address class="adds">
                     <p class="footer-addres__company">г. Киев, пр-т Леси Украинки, 26</p>
                     <ul class="contacts list">
                         <li class="contacts__element">
@@ -493,9 +493,9 @@
                         </a>
                     </li>
                 </ul>
-            </div> -->
-    <!-- Футер-форма -->
-    <!-- <div class="footer-modal footer__footer-modal">
+            </div>
+                        <!-- Футер-форма -->
+            <div class="footer-modal footer__footer-modal">
                 <form action="#">
                     <p class="footer-modal__subscription">Подпишитесь на рассылку</p>
                     <div class="footer-form">
@@ -509,7 +509,7 @@
                 </form>
             </div>
         </div>
-    </footer> -->
+    </footer>
 
     <!-- Модальное окно -->
     <!-- <div class="backdrop is-hidden" data-modal>
