Адаптирует секцию Портфолио

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
     </footer>
 
     <!-- Модальное окно -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal-clos-btn" data-modal-close>
                 <svg class="modal-clos-btn__icon">
@@ -568,7 +568,7 @@
     </div> -->
 
     <script src="./js/menu.js"></script>
-    <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
