--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
                     <li class="filters__item list"><button class="button" type="button">Маркетинг</button></li>
                 </ul>
                 <ul class="portfolio list">
-                    <li class="list  portfolio__list">
+                    <li class="list portfolio__list">
                         <a class="link portfolio__item" href="">
                             <div class="portfolio__wrapper">
                                 <picture>
@@ -324,7 +324,7 @@
                 </ul>
             </div>
         </section>
-    </main> -->
+    </main>
 
     <!-- Footer -->
     <footer class="footer">
