--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
                     </svg>
                 </button>
                 <ul class="mobile-menu__nav list">
-                    <li class="mobile-menu__item"><a href="" class="mobile-menu__link link">Студия</a></li>
+                    <li class="mobile-menu__item"><a href="./index.html" class="mobile-menu__link link">Студия</a></li>
                     <li class="mobile-menu__item"><a href="" class="mobile-menu__link current link">Портфолио</a></li>
                     <li class="mobile-menu__item"><a href="" class="mobile-menu__link link">Контакты</a></li>
                 </ul>
