--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </button>
                 <ul class="mobile-menu__nav list">
                     <li class="mobile-menu__item"><a href="" class="mobile-menu__link current link">Студия</a></li>
-                    <li class="mobile-menu__item"><a href="" class="mobile-menu__link link">Портфолио</a></li>
+                    <li class="mobile-menu__item"><a href="./portfolio.html" class="mobile-menu__link link">Портфолио</a></li>
                     <li class="mobile-menu__item"><a href="" class="mobile-menu__link link">Контакты</a></li>
                 </ul>
 
