Адаптирует под устройства

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,17 +19,17 @@
 
 <body>
     <!-- HEADER -->
-    <header class="header">
+    <header class="header border">
         <div class="container header__container">
             <nav class="header__navigation">
                 <a href="" class="footer-addres__logo link animate__backInDown"><span>Web</span>Studio</a>
     
                 <ul class="menu list">
                     <li class="menu__item">
-                        <a href="" class="link current menu-link">Студия</a>
+                        <a href="./index.html" class="link menu-link">Студия</a>
                     </li>
                     <li class="menu__item">
-                        <a href="./portfolio.html" class="link menu-link">Портфолио</a>
+                        <a href="./portfolio.html" class="link current menu-link">Портфолио</a>
                     </li>
                     <li class="menu__item">
                         <a href="" class="link menu-link">Контакты</a>
