Дорабатывает моб. меню

--- a/index.html
+++ b/index.html
@@ -75,26 +75,26 @@
                         <li class="mobile-menu__item"><a href="./portfolio.html" class="mobile-menu__link link">Портфолио</a></li>
                         <li class="mobile-menu__item"><a href="" class="mobile-menu__link link">Контакты</a></li>
                     </ul>
-                </div>
-                
 
-                <div class="mobile-menu__contactu">
-                    <div class="mobile-menu__contact-bloc">
-                        <ul class="mobile-menu__contact list">
-                            <li class="mobile-menu__contact-list"><a href="" class="mobile-menu__contact-tel link">+38 096 111 11 11</a>
-                            </li>
-                            <li class="mobile-menu__contact-list"><a href="" class="mobile-menu__contact-link link">info@devstudio.com</a>
-                            </li>
-                        </ul>
-                    </div>
+                    <div class="mobile-menu__contactu">
+                        <div class="mobile-menu__contact-bloc">
+                            <ul class="mobile-menu__contact list">
+                                <li class="mobile-menu__contact-list"><a href="" class="mobile-menu__contact-tel link">+38 096 111 11 11</a>
+                                </li>
+                                <li class="mobile-menu__contact-list"><a href=""
+                                        class="mobile-menu__contact-link link">info@devstudio.com</a>
+                                </li>
+                            </ul>
+                        </div>
                     
-                    <div class="mobile-menu__social-bloc">
-                        <ul class="mobile-menu__social list">
-                            <li class="mobile-menu__social-list"><a href="" class="mobile-menu__social-link link">Instagram</a></li>
-                            <li class="mobile-menu__social-list"><a href="" class="mobile-menu__social-link link">Twitter</a></li>
-                            <li class="mobile-menu__social-list"><a href="" class="mobile-menu__social-link link">Facebook</a></li>
-                            <li class="mobile-menu__social-list"><a href="" class="mobile-menu__social-link link">LinkedIn</a></li>
-                        </ul>
+                        <div class="mobile-menu__social-bloc">
+                            <ul class="mobile-menu__social list">
+                                <li class="mobile-menu__social-list"><a href="" class="mobile-menu__social-link link">Instagram</a></li>
+                                <li class="mobile-menu__social-list"><a href="" class="mobile-menu__social-link link">Twitter</a></li>
+                                <li class="mobile-menu__social-list"><a href="" class="mobile-menu__social-link link">Facebook</a></li>
+                                <li class="mobile-menu__social-list"><a href="" class="mobile-menu__social-link link">LinkedIn</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
