--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                 <button type="submit" class="form-btn">Отправить</button>
             </form>
         </div>
-    </div> -->
+    </div>
 
     <script src="./js/menu.js"></script>
     <script src="./js/modal.js"></script>
